tests/e2e/not_allowed/mock.error
Error: syntax error in story at line 1, column 1

1|    mock = 1
      ^^^^

E0030: `mock` is reserved for future use
